FEAT : 추천/팔로잉 탭 추가

--- a/Android/app/src/main/res/layout/activity_post.xml
+++ b/Android/app/src/main/res/layout/activity_post.xml
@@ -4,46 +4,123 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="com.example.cosmetictogether.presentation.post.viewmodel.PostViewModel" />
     </data>
-    <!--글 바텀 네비게이션 바-->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white">
 
+        <!--상단 툴바-->
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
+            android:id="@+id/postAppBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60sp"
             tools:ignore="MissingConstraints">
 
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="#CEDDFE"
-                app:contentInsetStart="0dp">
+                app:contentInsetStart="0sp"
+                app:layout_scrollFlags="scroll|enterAlways">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:layout_gravity="center"
-                    android:text="화함"
+                    android:padding="10sp"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:fontFamily="@font/nanum_square_eb" />
+                    android:fontFamily="@font/nanum_square_eb"
+                    android:text="화함" />
+
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <FrameLayout
-            android:id="@+id/postFragmentContainer"
+        <!-- 툴바 아래 추천/팔로잉 탭 -->
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/postTabLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            app:tabIndicatorColor="@color/black"
+            app:tabSelectedTextColor="@color/black"
+            app:tabTextColor="@android:color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@id/postAppBarLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="최근" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="팔로잉" />
+        </com.google.android.material.tabs.TabLayout>
+
+        <!-- 게시글 목록 -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/postRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/postTabLayout"
+            app:layout_constraintBottom_toTopOf="@+id/footerLayout"
+            app:layout_constraintVertical_bias="0.0"
+            tools:listitem="@layout/item_post" />
+
+        <!-- 글 작성 버튼 -->
+        <FrameLayout
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="end|bottom"
+            android:padding="3dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            app:layout_constraintBottom_toTopOf="@id/footerLayout"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <Button
+                android:id="@+id/createPostButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="글 작성"
+                android:background="@drawable/stroke_sky_full_angle"
+                android:textColor="@android:color/white" />
+        </FrameLayout>
+
+        <!-- 하단 네비게이션 -->
+        <LinearLayout
+            android:id="@+id/footerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#CEDDFE"
+                app:menu="@menu/bottom_navigation_menu"
+                app:itemIconTint="@color/bottom_nav_item_color"
+                app:itemTextColor="@color/bottom_nav_item_color"
+                app:itemIconSize="24dp"
+                app:labelVisibilityMode="labeled" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
