--- a/Android/app/src/main/res/layout/activity_post_detail.xml
+++ b/Android/app/src/main/res/layout/activity_post_detail.xml
@@ -1,32 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="post"
+            type="com.example.cosmetictogether.data.model.PostDetailResponse" />
     </data>
 
-    <!--글 디테일 틀-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/postDetailAppBarLayout"
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="60sp"
+            android:layout_height="wrap_content"
             tools:ignore="MissingConstraints">
 
             <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="#CEDDFE"
-                app:contentInsetStart="0sp"
-                app:layout_scrollFlags="scroll|enterAlways">
+                app:contentInsetStart="0dp">
 
                 <ImageButton
+                    android:id="@+id/backBtn"
                     android:layout_width="45sp"
                     android:layout_height="45sp"
                     android:adjustViewBounds="true"
@@ -38,27 +39,216 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:layout_gravity="center"
-                    android:padding="10sp"
+                    android:text="화함"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:fontFamily="@font/nanum_square_eb"
-                    android:text="화함" />
+                    android:fontFamily="@font/nanum_square_eb" />
 
             </androidx.appcompat.widget.Toolbar>
-
         </com.google.android.material.appbar.AppBarLayout>
 
-        <FrameLayout
-            android:id="@+id/formFragmentContainer"
-            android:layout_width="match_parent"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/commentRecyclerView"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/postDetailAppBarLayout"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toBottomOf="@id/postLayout"
+            app:layout_constraintBottom_toTopOf="@id/commentInputLayout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:listitem="@layout/item_comment"/>
 
+        <!-- 게시글 정보 -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/postLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/appbar">
+
+            <ImageView
+                android:id="@+id/postDetailProfile"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:srcCompat="@{post.profileUrl}"
+                app:layout_constraintBottom_toTopOf="@+id/postContent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <!--닉네임-->
+            <TextView
+                android:id="@+id/authorNickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/nanum_square_eb"
+                android:text="@{post.writerNickName}"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@id/postDetailProfile"
+                app:layout_constraintStart_toEndOf="@id/postDetailProfile"
+                app:layout_constraintTop_toTopOf="@id/postDetailProfile" />
+
+
+            <!--팔로잉 버튼-->
+            <Button
+                android:id="@+id/followButton"
+                android:layout_width="70dp"
+                android:layout_height="33dp"
+                android:layout_marginStart="212dp"
+                android:background="@drawable/baseline_follow"
+                android:text="팔로잉"
+                android:textColor="@android:color/white"
+                android:textSize="13sp"
+                app:layout_constraintBottom_toBottomOf="@id/authorNickname"
+                app:layout_constraintStart_toEndOf="@id/authorNickname"
+                app:layout_constraintTop_toTopOf="@id/authorNickname"
+                app:layout_constraintVertical_bias="0.266" />
+
+            <TextView
+                android:id="@+id/postContent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/nanum_square_r"
+                android:maxLines="5"
+                android:text="@{post.description}"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/postDetailProfile" />
+
+            <!--이미지 영역-->
+            <GridLayout
+                android:id="@+id/imageGrid"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:columnCount="2"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/postContent">
+
+                <ImageView
+                    android:id="@+id/image1"
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:layout_columnWeight="1"
+                    android:scaleType="centerCrop"
+                    android:visibility="gone" />
+
+                <ImageView
+                    android:id="@+id/image2"
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:layout_columnWeight="1"
+                    android:scaleType="centerCrop"
+                    android:visibility="gone" />
+
+                <ImageView
+                    android:id="@+id/image3"
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:layout_columnWeight="1"
+                    android:scaleType="centerCrop"
+                    android:visibility="gone" />
+
+                <ImageView
+                    android:id="@+id/image4"
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:layout_columnWeight="1"
+                    android:scaleType="centerCrop"
+                    android:visibility="gone" />
+            </GridLayout>
+
+            <!--업로드 시간-->
+            <TextView
+                android:id="@+id/postDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/nanum_square_r"
+                android:text='@{"마지막으로 수정됨 " + post.postTime}'
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imageGrid" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="15dp"
+                android:background="@android:color/darker_gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/postDate" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- 댓글 입력창 -->
+        <LinearLayout
+            android:id="@+id/commentInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:orientation="horizontal"
+            android:background="#f9faf9"
+            app:layout_constraintBottom_toTopOf="@id/footerLayout">
+
+            <ImageView
+                android:id="@+id/favoriteIcon"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                app:layout_constraintTop_toBottomOf="@+id/imageGrid"
+                android:layout_gravity="center"
+                tools:ignore="MissingConstraints" />
+
+            <EditText
+                android:id="@+id/commentEditText"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:hint="댓글을 입력하세요" />
+
+            <Button
+                android:id="@+id/createPostButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="등록"
+                android:background="@drawable/stroke_sky_full_angle"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+
+
+        <!-- 하단 네비게이션 -->
+        <LinearLayout
+            android:id="@+id/footerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#CEDDFE"
+                app:menu="@menu/bottom_navigation_menu"
+                app:itemIconTint="@color/bottom_nav_item_color"
+                app:itemTextColor="@color/bottom_nav_item_color"
+                app:itemIconSize="24dp"
+                app:labelVisibilityMode="labeled" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
