--- a/Android/app/src/main/res/layout/activity_signup.xml
+++ b/Android/app/src/main/res/layout/activity_signup.xml
@@ -20,6 +20,7 @@
             app:layout_scrollFlags="scroll|enterAlways">
 
             <ImageButton
+                android:id="@+id/backBtn"
                 android:layout_width="45sp"
                 android:layout_height="45sp"
                 android:adjustViewBounds="true"
