--- a/Android/app/src/main/res/layout/item_form_header.xml
+++ b/Android/app/src/main/res/layout/item_form_header.xml
@@ -62,76 +62,69 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@{form.salesPeriod}"
+                android:text='@{"판매기간: " + form.salesPeriod}'
                 android:textColor="#000000"
                 android:layout_gravity="center"
                 android:textSize="14sp" />
         </LinearLayout>
 
         <!-- Organizer 정보 -->
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/organizerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:padding="8dp"
             app:layout_constraintTop_toBottomOf="@+id/salesPeriodLayout">
 
-            <!-- 프로필 사진 -->
-
-            <!-- 닉네임 및 버튼 -->
+            <!-- Organizer 프로필 -->
             <ImageView
                 android:id="@+id/organizer_url"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:layout_marginEnd="8dp"
                 android:scaleType="centerCrop"
                 app:imageUrl="@{form.organizerProfileUrl}"
-                android:layout_gravity="center"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <!-- 닉네임 -->
+            <TextView
+                android:id="@+id/organizerName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{form.organizerName}"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/organizer_url"
+                app:layout_constraintTop_toTopOf="@+id/organizer_url"
+                app:layout_constraintBottom_toBottomOf="@+id/organizer_url"
+                android:layout_marginStart="8dp" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:gravity="end"
+                android:padding="8dp">
 
-                <!-- 닉네임 -->
-                <TextView
-                    android:id="@+id/organizerName"
+                <ImageButton
+                    android:id="@+id/favoriteButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:text="@{form.organizerName}"
-                    android:layout_marginBottom="7sp"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/outline_bookmark_add_24"
+                    android:contentDescription="찜하기" />
 
-                <!-- 버튼 그룹 -->
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/followButton"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="4dp">
-
-                    <Button
-                        android:id="@+id/messageButton"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginEnd="8dp"
-                        android:background="@drawable/stroke_sky_full_angle"
-                        android:text="메시지"
-                        android:textColor="#FFFFFF" />
-
-                    <Button
-                        android:id="@+id/followButton"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/stroke_sky_angle"
-                        android:text="팔로우"
-                        android:textColor="@color/black" />
-                </LinearLayout>
+                    android:text="팔로우"
+                    android:textSize="14sp"
+                    android:background="@drawable/baseline_follow"
+                    android:textColor="@color/white"
+                    android:layout_marginStart="8dp"/>
             </LinearLayout>
-        </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
