--- a/Android/app/src/main/res/layout/item_order.xml
+++ b/Android/app/src/main/res/layout/item_order.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/tvDeliveryStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="주문완료"
+                android:text="@{order.orderStatus}"
                 android:textSize="14sp"
                 android:textColor="#4CAF50" />
 
