FEAT : 수정, 삭제 버튼 추가

--- a/Android/app/src/main/res/layout/item_post_write_photo.xml
+++ b/Android/app/src/main/res/layout/item_post_write_photo.xml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <variable
+            name="imageUrl"
+            type="String" />
+
+        <variable
+            name="onDelete"
+            type="android.view.View.OnClickListener" />
+    </data>
+
+    <FrameLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="4dp">
+
+        <ImageView
+            android:id="@+id/selectedImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:srcCompat="@{imageUrl}" />
+
+        <ImageButton
+            android:id="@+id/deleteImageButton"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="top|end"
+            android:background="?attr/selectableItemBackground"
+            android:src="@drawable/baseline_close_24"
+            android:contentDescription="이미지 삭제"
+            android:onClick="@{onDelete}" />
+    </FrameLayout>
+</layout>
